# powermgr_power_manager

./: .clang-format  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ohos.build  powermanager.yaml  powermanager_POWER_UE.yaml  powermgr.gni  publicity.xml
frameworks/cj/power/: BUILD.gn
frameworks/cj/runninglock/: BUILD.gn
frameworks/ets/taihe/: BUILD.gn
frameworks/napi/runninglock/: BUILD.gn  runninglock.cpp  runninglock_interface.cpp  runninglock_interface.h  runninglock_module.cpp  runninglock_napi.cpp  runninglock_napi.h
hdi/client/: BUILD.gn
hdi/client/src/: power_hdf_callback.cpp  power_hdf_client.cpp
hdi/service/: BUILD.gn
hdi/service/include/: power_hdf_service.h
hdi/service/src/: power_hdf_service.cpp
interfaces/inner_api/: BUILD.gn  IPowerMgr.idl
interfaces/innerkits/: BUILD.gn
power_dialog/: BUILD.gn  build-profile.json5  hvigorfile.js  hvigorw  oh-package.json5  power_dialog.hap
power_dialog/AppScope/: app.json  app.json5
power_dialog/entry/: build-profile.json5  hvigorfile.js  oh-package.json5
power_dialog/hvigor/: hvigor-config.json5  hvigor-wrapper.js
power_dialog/signature/: openharmony_sx.p7b
services/: BUILD.gn  IPowerMgr.idl
services/native/include/: power_hdi_callback.h  power_hitrace.h  power_mgr_dumper.h  power_mgr_monitor.h  power_mgr_notify.h  power_mgr_service.h  power_mgr_service_ipc_adapter.h  power_mode_module.h  power_mode_policy.h  power_save_mode.h  power_state_machine.h  powerms_event_handler.h  proximity_controller_base.h  running_lock_inner.h  running_lock_mgr.h  running_lock_proxy.h  shutdown_service.h  suspend_controller.h  suspend_source_parser.h  suspend_sources.h  wakeup_controller.h  wakeup_source_parser.h  wakeup_sources.h
services/native/profile/: BUILD.gn  power_mode_config.xml  power_suspend.json  power_vibrator.json  power_wakeup.json  power_wakeup_action.json
services/native/src/: death_recipient_manager.cpp  death_recipient_manager.h  power_hdi_callback.cpp  power_mgr_dumper.cpp  power_mgr_factory.cpp  power_mgr_factory.h  power_mgr_monitor.cpp  power_mgr_notify.cpp  power_mgr_service.cpp  power_mgr_service_ipc_adapter.cpp  power_mode_module.cpp  power_mode_policy.cpp  power_save_mode.cpp  power_save_model.cpp  power_state_machine.cpp  powerms_event_handler.cpp  proximity_controller_base.cpp  running_lock_inner.cpp  running_lock_mgr.cpp  running_lock_proxy.cpp  shutdown_service.cpp
services/native/test/: BUILD.gn
services/zidl/: BUILD.gn
services/zidl/include/: async_ulsr_callback_proxy.h  async_ulsr_callback_stub.h  ipower_mgr_async.h  power_mgr_async_reply.h  power_mgr_async_reply_proxy.h  power_mgr_async_reply_stub.h  power_mgr_proxy.h  power_mgr_stub.h  power_mode_callback_proxy.h  power_mode_callback_stub.h  power_runninglock_callback_proxy.h  power_runninglock_callback_stub.h  power_shutdown_callback_proxy.h  power_shutdown_callback_stub.h  power_state_callback_proxy.h  power_state_callback_stub.h  running_lock_changed_callback_proxy.h  running_lock_changed_callback_stub.h  screen_off_pre_callback_proxy.h  screen_off_pre_callback_stub.h  sync_hibernate_callback_proxy.h  sync_hibernate_callback_stub.h  sync_sleep_callback_proxy.h  sync_sleep_callback_stub.h  takeover_suspend_callback_proxy.h  takeover_suspend_callback_stub.h  ulsr_callback_proxy.h  ulsr_callback_stub.h
services/zidl/src/: async_ulsr_callback_proxy.cpp  async_ulsr_callback_stub.cpp  power_mgr_async_reply.cpp  power_mgr_proxy.cpp  power_mgr_stub.cpp  power_mode_callback_proxy.cpp  power_mode_callback_stub.cpp  power_runninglock_callback_proxy.cpp  power_runninglock_callback_stub.cpp  power_shutdown_callback_proxy.cpp  power_shutdown_callback_stub.cpp  power_state_callback_proxy.cpp  power_state_callback_stub.cpp  running_lock_changed_callback_proxy.cpp  running_lock_changed_callback_stub.cpp  screen_off_pre_callback_proxy.cpp  screen_off_pre_callback_stub.cpp  sync_hibernate_callback_proxy.cpp  sync_hibernate_callback_stub.cpp  sync_sleep_callback_proxy.cpp  sync_sleep_callback_stub.cpp  takeover_suspend_callback_proxy.cpp  takeover_suspend_callback_stub.cpp  ulsr_callback_proxy.cpp  ulsr_callback_stub.cpp
test/: BUILD.gn  cfi_blocklist.txt  powermgr_test.gni
test/autotest/: choose_device.py  main.py
test/autotest/config/: use_config.xml
test/fuzztest/: BUILD.gn
test/fuzztest/asyncshutdowncallback_fuzzer/: BUILD.gn  asyncshutdowncallback_fuzzer_test.cpp
test/fuzztest/asynculsrcallback_fuzzer/: BUILD.gn  asyncshutdowncallback_fuzzer_test.cpp
test/fuzztest/createrunninglock_fuzzer/: BUILD.gn  createrunninglock_fuzzer_test.cpp
test/fuzztest/forcesuspenddevice_fuzzer/: BUILD.gn  forcesuspenddevice_fuzzer_test.cpp
test/fuzztest/getpowerconfig_fuzzer/: BUILD.gn  getpowerconfig_fuzzer_test.cpp  project.xml
test/fuzztest/getsetdevicemode_fuzzer/: BUILD.gn  getsetdevicemode_fuzzer_test.cpp
test/fuzztest/getshutdownreason_fuzzer/: BUILD.gn  getshutdownreason_fuzzer_test.cpp
test/fuzztest/getstate_fuzzer/: BUILD.gn  getstate_fuzzer_test.cpp
test/fuzztest/hibernate_fuzzer/: BUILD.gn  hibernate_fuzzer_test.cpp
test/fuzztest/iscollaborationscreenon_fuzzer/: BUILD.gn  iscollaborationscreenon_fuzzer_test.cpp  project.xml
test/fuzztest/isfoldscreenon_fuzzer/: BUILD.gn  isfoldscreenon_fuzzer_test.cpp
test/fuzztest/isforcesleeping_fuzzer/: BUILD.gn  isforcesleeping_fuzzer_test.cpp  project.xml
test/fuzztest/isrunninglockenable_fuzzer/: BUILD.gn  isrunninglockenable_fuzzer_test.cpp
test/fuzztest/isrunninglocktypesupported_fuzzer/: BUILD.gn  isrunninglocktypesupported_fuzzer_test.cpp
test/fuzztest/isscreenon_fuzzer/: BUILD.gn  (+1 more)
test/systemtest/: BUILD.gn
test/unittest/: BUILD.gn
tools/ohos-powerManager/: BUILD.gn  ohos-powerManager.json
utils/: BUILD.gn
utils/ability/: BUILD.gn  power_ability.cpp
utils/appmgr/: BUILD.gn
utils/ffrt/: BUILD.gn
utils/hookmgr/: BUILD.gn
utils/intf_wrapper/: BUILD.gn
utils/lib_loader/: BUILD.gn
utils/param/: BUILD.gn
utils/permission/: BUILD.gn
utils/setting/: BUILD.gn
utils/shell/: BUILD.gn
utils/vibrator/: BUILD.gn
(+787 files in other folders)
