# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

if (!defined(global_parts_info) ||
    defined(global_parts_info.powermgr_display_manager)) {
  has_display_manager_part = true
  cflags_cc = [ "-DHAS_DISPLAY_MANAGER_PART" ]
} else {
  has_display_manager_part = false
}

ability_runtime_path = "//foundation/ability/ability_runtime"

ability_runtime_inner_api_path = "${ability_runtime_path}/interfaces/inner_api"

ability_runtime_services_path = "${ability_runtime_path}/services"

powermgr_part_name = "power_manager"

powermgr_root_path = "//base/powermgr/power_manager"

powermgr_service_path = "${powermgr_root_path}/services"

powermgr_service_zidl = "${powermgr_service_path}/zidl"

powermgr_framework = "${powermgr_root_path}/frameworks"
powermgr_framework_native = "${powermgr_framework}/native"

powermgr_innerkits = "${powermgr_root_path}/interfaces/innerkits"

powermgr_kits = "${powermgr_root_path}/interfaces/kits"

powermgr_utils_path = "${powermgr_root_path}/utils"

system_type = "default"
