# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("dialog_hap") {
  deps = [ ":power_dialog_hap" ]
}

ohos_hap("power_dialog_hap") {
  hap_profile = "entry/src/main/module.json"

  deps = [
    ":power_dialog_js_assets",
    ":power_dialog_resources",
  ]

  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "power_dialog"

  subsystem_name = "applications"
  part_name = "prebuilt_hap"
  module_install_dir = "app/com.ohos.powerdialog"
}

ohos_js_assets("power_dialog_js_assets") {
  hap_profile = "entry/src/main/module.json"
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("power_dialog_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("power_dialog_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":power_dialog_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
