# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("dialog_hap") {
  deps = [ ":power_dialog_hap" ]
}

declare_args() {
  power_manager_feature_dialog_path = ""
}

ohos_app("power_dialog_hap") {
  publicity_file = "../publicity.xml"
  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "power_dialog"

  subsystem_name = "applications"
  part_name = "prebuilt_hap"
  module_install_dir = "app/com.ohos.powerdialog"

  js_build_mode = "release"
  sdk_home = "//prebuilts/ohos-sdk/linux"
  sdk_type_name = [ "sdk.dir" ]
  assemble_type = "assembleHap"
  build_level = "module"
  build_modules = [ "entry" ]

  if (defined(sign_hap_py_path) && power_manager_feature_dialog_path != "") {
    certificate_profile = power_manager_feature_dialog_path
    key_alias = "HwPowerOptionDialog Release"
    private_key_path = "HwPowerOptionDialog Release"
    compatible_version = "8"
  }
}
