# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

config("powermgr_public_config") {
  include_dirs = [
    "native/include",
    "zidl/include",
    "${powermgr_innerkits}/native/include",
    "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie/",
  ]
}

config("powermgr_private_config") {
  include_dirs = [ "native/src/setting" ]
}

ohos_shared_library("powermgrservice") {
  sources = [
    "native/src/power_hdi_callback.cpp",
    "native/src/power_mgr_dumper.cpp",
    "native/src/power_mgr_factory.cpp",
    "native/src/power_mgr_monitor.cpp",
    "native/src/power_mgr_notify.cpp",
    "native/src/power_mgr_service.cpp",
    "native/src/power_mode_module.cpp",
    "native/src/power_mode_policy.cpp",
    "native/src/power_save_mode.cpp",
    "native/src/power_state_machine.cpp",
    "native/src/powerms_event_handler.cpp",
    "native/src/running_lock_inner.cpp",
    "native/src/running_lock_mgr.cpp",
    "native/src/setting/setting_helper.cpp",
    "native/src/shutdown_service.cpp",
  ]

  configs = [
    ":powermgr_private_config",
    "${powermgr_utils_path}:utils_config",
  ]

  public_configs = [ ":powermgr_public_config" ]

  deps = [
    ":powermgr_stub",
    "${powermgr_innerkits}:powermgr_client",
    "${powermgr_utils_path}/param:power_sysparam",
    "${powermgr_utils_path}/permission:power_permission",
    "${powermgr_utils_path}/setting:power_setting",
    "native/src/actions:powermgr_actions",
    "//foundation/arkui/ace_engine/interfaces/inner_api/ui_service_manager:ui_service_mgr",
    "//third_party/libxml2:libxml2",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_consumer",
    "drivers_interface_power:libpower_proxy_1.0",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "multimedia_image_framework:image_native",
    "safwk:system_ability_fwk",
    "sensor:sensor_interface_native",
  ]

  if (has_display_manager_part) {
    external_deps += [
      "display_manager:displaymgr",
      "window_manager:libdm",
    ]
  }

  part_name = "${powermgr_part_name}"
}

ohos_shared_library("powermgr_stub") {
  sources = [
    "zidl/src/power_mgr_stub.cpp",
    "zidl/src/power_mode_callback_stub.cpp",
    "zidl/src/power_shutdown_callback_stub.cpp",
    "zidl/src/power_state_callback_stub.cpp",
  ]

  configs = [ "${powermgr_utils_path}:utils_config" ]

  public_configs = [ ":powermgr_public_config" ]

  deps = [ "${powermgr_innerkits}:powermgr_client" ]

  external_deps = [
    "c_utils:utils",
    "hicollie_native:libhicollie",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "${powermgr_part_name}"
}

group("service") {
  deps = [
    ":powermgr_stub",
    ":powermgrservice",
    "native/profile:power_service_config",
  ]
}
