# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../powermgr.gni")

group("apitest") {
  testonly = true
  deps = [ "apitest/inner_api/ffrt:apitest" ]
}

group("systemtest") {
  testonly = true
  deps = [ "systemtest:systemtest_powermgr" ]
}

group("fuzztest") {
  testonly = true
  deps = [ "fuzztest:fuzztest" ]
}

group("unittest") {
  testonly = true
  deps = [
    "apitest/inner_api/ffrt:apitest",
    "apitest/inner_api/shutdown:unittest",
    "unittest:unittest",
    "unittest/src/servicetest:unittest",
  ]
}
