# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")
import("//build/test.gni")

config("utils_config") {
  include_dirs = [
    "native/include",
    "//commonlibrary/c_utils/base/include",
  ]
}

ohos_executable("power-shell") {
  include_dirs = [
    "${powermgr_innerkits}/native/include",
    "${powermgr_utils_path}/shell/include",
    "${ability_runtime_services_path}/common/include",
    "${ability_runtime_path}/tools/aa/include",
  ]

  sources = [
    "shell/src/main.cpp",
    "shell/src/power_shell_command.cpp",
  ]

  deps = [
    "${ability_runtime_path}/tools/aa:tools_aa_source_set",
    "${powermgr_innerkits}:powermgr_client",
  ]

  configs = [
    "${ability_runtime_path}/tools/aa:ability_command_config",
    "${ability_runtime_services_path}/common:common_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  if (has_display_manager_part) {
    external_deps += [ "display_manager:displaymgr" ]
  }

  install_enable = true
  part_name = "${powermgr_part_name}"
}
