# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../powermgr.gni")

config("utils_config") {
  include_dirs = [ "native/include" ]
}

declare_args() {
  power_manager_feature_coverage = false
}

config("coverage_flags") {
  if (power_manager_feature_coverage) {
    cflags = [ "--coverage" ]
    cflags_cc += [ "--coverage" ]
    ldflags = [ "--coverage" ]
  }
}

ohos_executable("power-shell") {
  include_dirs = [
    "${powermgr_inner_api}/native/include",
    "${powermgr_utils_path}/shell/include",
    "${ability_runtime_services_path}/common/include",
    "${ability_runtime_path}/tools/aa/include",
  ]

  sources = [
    "shell/src/main.cpp",
    "shell/src/power_shell_command.cpp",
  ]

  deps = [ "${powermgr_inner_api}:powermgr_client" ]

  configs = [
    "${ability_runtime_path}/tools/aa:ability_command_config",
    "${ability_runtime_services_path}/common:common_config",
    "${powermgr_utils_path}:coverage_flags",
  ]

  external_deps = [
    "ability_runtime:tools_aa_source_set",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  if (has_display_manager_part) {
    external_deps += [ "display_manager:displaymgr" ]
  }

  install_enable = true
  part_name = "${powermgr_part_name}"
}
