# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../powermgr.gni")

config("utils_config") {
  include_dirs = [ "native/include" ]
}

declare_args() {
  power_manager_feature_coverage = false
}

config("coverage_flags") {
  if (power_manager_feature_coverage) {
    cflags = [ "--coverage" ]
    cflags_cc += [ "--coverage" ]
    ldflags = [ "--coverage" ]
  }
}

ohos_source_set("power_utils") {
  sources = [ "native/src/power_utils.cpp" ]

  include_dirs = [ "${powermgr_inner_api}/native/include" ]

  configs = [ "${powermgr_utils_path}:coverage_flags" ]

  public_configs = [ ":utils_config" ]

  external_deps = [ "c_utils:utils" ]

  subsystem_name = "powermgr"
  part_name = "${powermgr_part_name}"
}
