# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")
import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

config("power_client_public_config") {
  include_dirs = [
    "include",
    "${powermgr_root_path}/hdi/api/include",
  ]
}

ohos_shared_library("power_hdf_client") {
  sources = [
    "src/power_hdf_callback.cpp",
    "src/power_hdf_client.cpp",
  ]

  configs = [ "${powermgr_utils_path}:utils_config" ]

  public_configs = [ ":power_client_public_config" ]

  deps = [
    "${hdf_uhdf_path}/hdi:libhdi",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "power_manager_native"
}
